--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-numpy==1.15.4
-PTable==0.9.2
 bokeh==1.0.1
+Jinja2==2.10
+MarkupSafe==1.1.0
+numpy==1.15.4
+packaging==18.0
+Pillow==5.3.0
+PTable==0.9.2
+pyparsing==2.3.0
+python-dateutil==2.7.5
+PyYAML==3.13
+six==1.11.0
+torch==0.4.1
+torchvision==0.2.1
+tornado==5.1.1
