--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 bokeh==1.0.1
+cycler==0.10.0
 Jinja2==2.10
+kiwisolver==1.1.0
 MarkupSafe==1.1.0
+matplotlib==3.1.1
 numpy==1.15.4
 packaging==18.0
 Pillow==5.3.0
@@ -9,6 +12,4 @@ pyparsing==2.3.0
 python-dateutil==2.7.5
 PyYAML==3.13
 six==1.11.0
-torch==0.4.1
-torchvision==0.2.1
 tornado==5.1.1
